--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,9 @@ dependencies {
     // Crashlytics
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
     implementation 'com.google.firebase:firebase-core:16.0.1'
+
+    // TapTargetView
+    implementation 'uk.co.samuelwall:material-tap-target-prompt:2.12.1'
 }
 
 configurations.all {
