--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         </activity>
         <activity android:name=".LoginActivity"
             android:theme="@style/LoginActivityTheme">
-
+        </activity>
+        <activity android:name=".groups.ui.GroupsActivity"
+            android:parentActivityName=".MainActivity">
         </activity>
         <activity android:name="com.vk.sdk.VKServiceActivity"
             android:label="ServiceActivity"
