--- a/build.gradle
+++ b/build.gradle
@@ -33,17 +33,19 @@ ext {
     // App dependencies
     supportLibraryVersion = '25.3.1'
     constraintLayoutVersion = '1.0.2'
-    gsonVersion = '2.8.0'
-
-    dagger2Version = '2.8'
+    gsonVersion = '2.8.1'
+    dagger2Version = '2.11'
+    jsr250Version = '1.0'
+    eventbusVersion = '3.0.0'
     butterKnifeVersion = '8.5.1'
     materialDialogsVersion = '0.9.4.5'
+    glideVersion = '4.0.0-RC1'
+    leakCanaryVersion = '1.5.1'
 
-    vksdkVersion = '1.6.5'
+    // vksdk
+    vksdkVersion = '1.6.9'
 
-    //Test dependencies
+    // Test dependencies
     junitVersion = '4.12'
     espressoVersion = '2.2.2'
-
-    leakCanaryVersion = '1.5.1'
 }
