--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.ovchinnikovm.android.vktop"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -40,18 +39,19 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
     // android support libraries
-    compile "com.android.support:appcompat-v7:25.3.1"
+    compile "com.android.support:appcompat-v7:27.0.2"
+    compile 'com.android.support:support-v13:27.0.2'
     compile "com.android.support.constraint:constraint-layout:1.0.2"
-    compile "com.android.support:recyclerview-v7:25.3.1"
-    compile "com.android.support:cardview-v7:25.3.1"
-    compile "com.android.support:design:25.3.1"
+    compile "com.android.support:recyclerview-v7:27.0.2"
+    compile "com.android.support:cardview-v7:27.0.2"
+    compile "com.android.support:design:27.0.2"
 
     // code generator for view
-    compile "com.jakewharton:butterknife:8.5.1"
-    annotationProcessor "com.jakewharton:butterknife-compiler:8.5.1"
+    compile "com.jakewharton:butterknife:8.8.1"
+    annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
 
     // parser
-    compile "com.google.code.gson:gson:2.8.1"
+    compile "com.google.code.gson:gson:2.8.2"
 
     // compile 'com.vk:androidsdk:1.6.9'
     compile project(':vksdk_library')
@@ -60,49 +60,50 @@ dependencies {
     testCompile "junit:junit:4.12"
 
     // UI Testing
-    androidTestCompile "com.android.support.test.espresso:espresso-core:2.2.2"
+    androidTestCompile "com.android.support.test.espresso:espresso-core:3.0.1"
 
     // Material dialogs
-    compile "com.afollestad.material-dialogs:core:0.9.4.5"
+    compile "com.afollestad.material-dialogs:core:0.9.6.0"
 
     // LeakCanary
-    debugCompile "com.squareup.leakcanary:leakcanary-android:1.5.1"
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.5.1"
-    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.5.1"
+    debugCompile "com.squareup.leakcanary:leakcanary-android:1.5.4"
+    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.5.4"
+    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.5.4"
 
     // Dagger
-    annotationProcessor "com.google.dagger:dagger-compiler:2.11"
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
+    compile 'com.google.dagger:dagger-android-support:2.14.1'
     provided "javax.annotation:jsr250-api:1.0"
-    compile "com.google.dagger:dagger:2.11"
+    compile 'com.google.dagger:dagger:2.14.1'
 
     // Picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     // EventBus
-    compile "org.greenrobot:eventbus:3.0.0"
+    compile "org.greenrobot:eventbus:3.1.1"
 
     // Dart-Henson
-    compile "com.f2prateek.dart:dart:2.0.2"
-    provided "com.f2prateek.dart:dart-processor:2.0.2"
-    compile "com.f2prateek.dart:henson:2.0.2"
-    provided "com.f2prateek.dart:henson-processor:2.0.2"
+    compile "com.f2prateek.dart:dart:2.0.3"
+    annotationProcessor "com.f2prateek.dart:dart-processor:2.0.3"
+    compile "com.f2prateek.dart:henson:2.0.3"
+    annotationProcessor "com.f2prateek.dart:henson-processor:2.0.3"
 
     // Multidex
-    compile "com.android.support:multidex:1.0.1"
+    compile "com.android.support:multidex:1.0.2"
 
     // RxJava
-    compile 'io.reactivex.rxjava2:rxjava:2.1.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.8'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     // Retrofit
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
-    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
 
     // Range date picker
     compile 'com.borax12.materialdaterangepicker:library:1.9'
 }
 
 configurations.all {
-    resolutionStrategy.force "com.android.support:support-annotations:25.3.1"
+    resolutionStrategy.force "com.android.support:support-annotations:27.0.2"
 }
