--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "com.ovchinnikovm.android.vktop"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdkVersion 16
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -39,55 +39,55 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
     // android support libraries
-    compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
-    compile "com.android.support.constraint:constraint-layout:$rootProject.constraintLayoutVersion"
-    compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
-    compile "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
-    compile "com.android.support:design:$rootProject.ext.supportLibraryVersion"
+    compile "com.android.support:appcompat-v7:25.3.1"
+    compile "com.android.support.constraint:constraint-layout:1.0.2"
+    compile "com.android.support:recyclerview-v7:25.3.1"
+    compile "com.android.support:cardview-v7:25.3.1"
+    compile "com.android.support:design:25.3.1"
 
     // code generator for view
-    compile "com.jakewharton:butterknife:$rootProject.butterKnifeVersion"
-    annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.butterKnifeVersion"
+    compile "com.jakewharton:butterknife:8.5.1"
+    annotationProcessor "com.jakewharton:butterknife-compiler:8.5.1"
 
     // parser
-    compile "com.google.code.gson:gson:$rootProject.gsonVersion"
+    compile "com.google.code.gson:gson:2.8.1"
 
     // compile 'com.vk:androidsdk:1.6.9'
     compile project(':vksdk_library')
 
     // Dependencies for local unit tests
-    testCompile "junit:junit:$rootProject.junitVersion"
+    testCompile "junit:junit:4.12"
 
     // UI Testing
-    androidTestCompile "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
+    androidTestCompile "com.android.support.test.espresso:espresso-core:2.2.2"
 
     // Material dialogs
-    compile "com.afollestad.material-dialogs:core:$rootProject.materialDialogsVersion"
+    compile "com.afollestad.material-dialogs:core:0.9.4.5"
 
     // LeakCanary
-    debugCompile "com.squareup.leakcanary:leakcanary-android:$rootProject.leakCanaryVersion"
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.leakCanaryVersion"
-    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.leakCanaryVersion"
+    debugCompile "com.squareup.leakcanary:leakcanary-android:1.5.1"
+    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.5.1"
+    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.5.1"
 
     // Dagger
-    annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.ext.dagger2Version"
-    provided "javax.annotation:jsr250-api:$rootProject.ext.jsr250Version"
-    compile "com.google.dagger:dagger:$rootProject.ext.dagger2Version"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.11"
+    provided "javax.annotation:jsr250-api:1.0"
+    compile "com.google.dagger:dagger:2.11"
 
     // Picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     // EventBus
-    compile "org.greenrobot:eventbus:$rootProject.ext.eventbusVersion"
+    compile "org.greenrobot:eventbus:3.0.0"
 
     // Dart-Henson
-    compile "com.f2prateek.dart:dart:$rootProject.ext.darthensonVersion"
-    provided "com.f2prateek.dart:dart-processor:$rootProject.ext.darthensonVersion"
-    compile "com.f2prateek.dart:henson:$rootProject.ext.darthensonVersion"
-    provided "com.f2prateek.dart:henson-processor:$rootProject.ext.darthensonVersion"
+    compile "com.f2prateek.dart:dart:2.0.2"
+    provided "com.f2prateek.dart:dart-processor:2.0.2"
+    compile "com.f2prateek.dart:henson:2.0.2"
+    provided "com.f2prateek.dart:henson-processor:2.0.2"
 
     // Multidex
-    compile "com.android.support:multidex:$rootProject.ext.multidexVersion"
+    compile "com.android.support:multidex:1.0.1"
 
     // RxJava
     compile 'io.reactivex.rxjava2:rxjava:2.1.1'
@@ -100,5 +100,5 @@ dependencies {
 }
 
 configurations.all {
-    resolutionStrategy.force "com.android.support:support-annotations:$supportLibraryVersion"
+    resolutionStrategy.force "com.android.support:support-annotations:25.3.1"
 }
