--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:minSdkVersion="16"
         android:name=".VkTopApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
