--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     compile "com.google.dagger:dagger:$rootProject.ext.dagger2Version"
 
     // Glide
-    compile "com.github.bumptech.glide:glide:$rootProject.ext.glideVersion"
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
     // EventBus
     compile "org.greenrobot:eventbus:$rootProject.ext.eventbusVersion"
