--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [ 'dart.henson.package' : 'com.ovchinnikovm.android.vktop' ]
@@ -84,6 +85,13 @@ dependencies {
     provided "com.f2prateek.dart:dart-processor:$rootProject.ext.darthensonVersion"
     compile "com.f2prateek.dart:henson:$rootProject.ext.darthensonVersion"
     provided "com.f2prateek.dart:henson-processor:$rootProject.ext.darthensonVersion"
+
+    // Multidex
+    compile "com.android.support:multidex:$rootProject.ext.multidexVersion"
+
+    // RxJava
+    compile 'io.reactivex.rxjava2:rxjava:2.1.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
 }
 
