--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,72 +36,72 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     // android support libraries
-    compile "com.android.support:appcompat-v7:27.0.2"
-    compile 'com.android.support:support-v13:27.0.2'
-    compile "com.android.support.constraint:constraint-layout:1.0.2"
-    compile "com.android.support:recyclerview-v7:27.0.2"
-    compile "com.android.support:cardview-v7:27.0.2"
-    compile "com.android.support:design:27.0.2"
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation 'com.android.support:support-v13:27.1.1'
+    implementation "com.android.support.constraint:constraint-layout:1.1.0"
+    implementation "com.android.support:recyclerview-v7:27.1.1"
+    implementation "com.android.support:cardview-v7:27.1.1"
+    implementation "com.android.support:design:27.1.1"
 
     // code generator for view
-    compile "com.jakewharton:butterknife:8.8.1"
+    implementation "com.jakewharton:butterknife:8.8.1"
     annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
 
     // parser
-    compile "com.google.code.gson:gson:2.8.2"
+    implementation "com.google.code.gson:gson:2.8.2"
 
     // compile 'com.vk:androidsdk:1.6.9'
-    compile project(':vksdk_library')
+    implementation project(':vksdk_library')
 
     // Dependencies for local unit tests
-    testCompile "junit:junit:4.12"
+    testImplementation "junit:junit:4.12"
 
     // UI Testing
-    androidTestCompile "com.android.support.test.espresso:espresso-core:3.0.1"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.1"
 
     // Material dialogs
-    compile "com.afollestad.material-dialogs:core:0.9.6.0"
+    implementation "com.afollestad.material-dialogs:core:0.9.6.0"
 
     // LeakCanary
-    debugCompile "com.squareup.leakcanary:leakcanary-android:1.5.4"
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.5.4"
-    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.5.4"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:1.5.4"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:1.5.4"
+    testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:1.5.4"
 
     // Dagger
     annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
-    compile 'com.google.dagger:dagger-android-support:2.14.1'
-    provided "javax.annotation:jsr250-api:1.0"
-    compile 'com.google.dagger:dagger:2.14.1'
+    implementation 'com.google.dagger:dagger-android-support:2.14.1'
+    compileOnly "javax.annotation:jsr250-api:1.0"
+    implementation 'com.google.dagger:dagger:2.14.1'
 
     // Picasso
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
     // EventBus
-    compile "org.greenrobot:eventbus:3.1.1"
+    implementation "org.greenrobot:eventbus:3.1.1"
 
     // Dart-Henson
-    compile "com.f2prateek.dart:dart:2.0.3"
+    implementation "com.f2prateek.dart:dart:2.0.3"
     annotationProcessor "com.f2prateek.dart:dart-processor:2.0.3"
-    compile "com.f2prateek.dart:henson:2.0.3"
+    implementation "com.f2prateek.dart:henson:2.0.3"
     annotationProcessor "com.f2prateek.dart:henson-processor:2.0.3"
 
     // Multidex
-    compile "com.android.support:multidex:1.0.2"
+    implementation "com.android.support:multidex:1.0.3"
 
     // RxJava
-    compile 'io.reactivex.rxjava2:rxjava:2.1.8'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     // Retrofit
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
 
     // Range date picker
-    compile 'com.borax12.materialdaterangepicker:library:1.9'
+    implementation 'com.borax12.materialdaterangepicker:library:1.9'
 }
 
 configurations.all {
