--- a/vksdk_library/build.gradle
+++ b/vksdk_library/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 9
@@ -16,6 +16,6 @@ configurations {
 }
 
 dependencies {
-    javadocDeps 'com.android.support:support-annotations:25.1.0'
-    compile 'com.android.support:support-v4:25.1.0'
+    javadocDeps 'com.android.support:support-annotations:27.1.1'
+    implementation 'com.android.support:support-v4:25.4.0'
 }
