--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,39 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.ovchinnikovm.android.vktop">
+    package="com.ovchinnikovm.android.vktop">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:minSdkVersion="16"
         android:name=".VkTopApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:minSdkVersion="16"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".main.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"
-                  android:theme="@style/LoginActivityTheme"/>
-        <activity android:name=".groups.ui.GroupsActivity"
-                  android:label="@string/groups_title_text"
-                  android:parentActivityName=".main.MainActivity"/>
-        <activity android:name=".group.ui.GroupActivity"
-                  android:label="@string/group_title_text"
-                  android:parentActivityName=".groups.ui.GroupsActivity"/>
-        <activity android:name=".posts.ui.PostsActivity"
-                  android:parentActivityName=".group.ui.GroupActivity"
-                  android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name="com.vk.sdk.VKServiceActivity"
-                  android:label="ServiceActivity"
-                  android:theme="@style/VK.Transparent" />
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/LoginActivityTheme" />
+        <activity
+            android:name=".groups.ui.GroupsActivity"
+            android:label="@string/groups_title_text"
+            android:parentActivityName=".groups.ui.GroupsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".groups.ui.GroupsActivity"/>
+        </activity>
+        <activity
+            android:name=".group.ui.GroupActivity"
+            android:label="@string/group_title_text"
+            android:parentActivityName=".groups.ui.GroupsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".groups.ui.GroupsActivity"/>
+        </activity>
+        <activity
+            android:name=".posts.ui.PostsActivity"
+            android:parentActivityName=".group.ui.GroupActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".group.ui.GroupActivity"/>
+        </activity>
+        <activity
+            android:name="com.vk.sdk.VKServiceActivity"
+            android:label="ServiceActivity"
+            android:theme="@style/VK.Transparent" />
+        <activity
+            android:name=".settings.SettingsActivity"
+            android:label="@string/settings_label"
+            android:parentActivityName=".main.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".main.MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
